# vanttec_usv

./: .gitignore  .gitmodules  .readthedocs.yaml  Dockerfile  LICENSE  Makefile  README.md  create_container_intel.bash  grgrg  init_workspace.sh  source.sh  tash apply stash@{n}:Q  test.txt  zeroshot.py
.github/: CODEOWNERS
scripts/: usv
src/usv_control/: CMakeLists.txt  package.xml
src/usv_control/config/: path_config.yaml  sbg_device.yaml  weights.yaml
src/usv_control/config/code_gen/: casadi_codegen.c  casadi_codegen.h  casadi_codegen.json  problem_information.h
src/usv_control/launch/: aitsmc_nmpc_sim_launch.py  aitsmc_testing_launch.py  can_launch.py  gazebo_control1_launch.py  gazebo_control2_launch.py  gazebo_control_launch.py  mpc_launch.py  nmpc_sim_launch.py  pid_launch.py  pid_testing_launch.py  sbg_launch.py  sbg_launch_only.py  teleop_launch.py  test_control_shape_follower_launch.py  test_control_sine_follower_launch.py  test_control_wp_follower_launch.py  test_imu_converter_launch.py  usv_control_launch.py  usv_control_sim_launch.py
src/usv_control/scripts/: mpc_fatrop.py  nmpc_node.py  nmpc_node_backup.py  nmpc_node_funciona_simplificado.py  path_publisher_node.py  teleop_aitsmc_node.py  teleop_can_node.py  teleop_control_node.py  teleop_mpc_node.py  uuv_teleop_node.py  waypoint_handler_node.py
src/usv_control/scripts/code_gen/: casadi_codegen.json  problem_information.h
src/usv_control/src/: aitsmc_new_node.cpp  aitsmc_node.cpp  asmc_node.cpp  dynamic_model_sim.cpp  kinematic_model_sim.cpp  los_node.cpp  mpc_node.cpp  obstacle_avoidance_node.cpp  path_maker_node.cpp  path_publisher_node.cpp  pid_node.cpp  twist_to_setpoint_node.cpp  usv_tf2_broadcaster_node.cpp  waypoint_handler_node.cpp
src/usv_description/: CMakeLists.txt  package.xml
src/usv_description/config/: joy_params.yaml  vtec_s3.yaml
src/usv_description/custom_bridges/: custom_bridge.cpp  gz_ros_conversions.cpp  gz_ros_conversions.hpp
src/usv_description/gazebo/: world.sdf
src/usv_description/hooks/: resource_paths.sh
src/usv_description/launch/: gazebo_launch.py  rviz_launch.py  usv_joy_teleop.py  usv_joy_teleop_launch.py
src/usv_description/models/: sydney_regatta_custom.sdf
src/usv_description/models/delivery_octagon/: model.config  model.sdf
src/usv_description/models/dock/: model.config  model.sdf
src/usv_description/models/dock_m4/: model.config  model.sdf
src/usv_description/models/dock_poster_blue/: model.config  model.sdf
src/usv_description/models/dock_poster_duck/: model.config  model.sdf
src/usv_description/models/dock_poster_green/: model.config  model.sdf
src/usv_description/models/dock_poster_plus/: model.config  model.sdf
src/usv_description/models/dock_poster_red/: model.config  model.sdf
src/usv_description/models/docking_challenge/: model.config  model.sdf
src/usv_description/models/follow_the_path_challenge/: model.config  model.sdf
src/usv_description/models/light_panel/: model.config  model.sdf
src/usv_description/models/mandatory_challenge/: model.config  model.sdf
src/usv_description/models/marker_buoy_port/: model.config  model.sdf
src/usv_description/models/marker_buoy_starboard/: model.config  model.sdf
src/usv_description/models/my_roboboat/: model.config  model.sdf
src/usv_description/models/plus_sign/: model.config  model.sdf
src/usv_description/models/return2home_challenge/: model.config  model.sdf
src/usv_description/models/round_buoy_black/: model.config  model.sdf
src/usv_description/models/round_buoy_blue/: model.config  model.sdf
src/usv_description/models/round_buoy_green/: model.config  model.sdf
src/usv_description/rviz/: gz.rviz  urdf.rviz  urdf2.rviz
src/usv_description/urdf/: usv.urdf  vtecs4.urdf
src/usv_description/worlds/: lake.sdf  nbpark.sdf  nbpark_custom.sdf
src/usv_lidar/: CMakeLists.txt  package.xml
src/usv_lidar/config/: bowl.txt  chair.txt  cube1000-0-in-z.txt  flat_4x4_1.txt  landscape.txt  lava_lamp.txt  params.yaml
src/usv_lidar/launch/: process_cloud.launch.py
src/usv_lidar/rviz/: kitti_viz.rviz  testing_viz.rviz
src/usv_lidar/scripts/: change_cluster  change_ksearch  change_normal  change_voxel
src/usv_lidar/src/: clustering_segmentation.cpp  testing_cloud.cpp
src/usv_missions/: CMakeLists.txt  package.xml
src/usv_missions/config/: global_configuration.yaml  obstacles.yaml  task_arrangement.yaml  task_schedule.yaml
src/usv_missions/launch/: mission_launch.py  obstacle_launch.py  usv_missions_launch.py
src/usv_missions/src/: docking.cpp  follow_the_path.cpp  ftp.cpp  ftp.h  global_obstacle_register_node.cpp  man_c.cpp  man_c.h  mandatory_challenge.cpp  mission_handler_node.cpp  obstacle_publisher.cpp  speed.cpp  speed.h  speed_challenge.cpp  usv_missions.cpp  wash.h
src/usv_perception/: CMakeLists.txt  README.md  package.xml  todo.txt
src/usv_perception/launch/: beeblebrox_launch.py  buoys_detect.launch.py  cam.launch.py  shapes_detect.launch.py  yolo_launch.py
src/usv_perception/scripts/: bag_to_vid.py  converter.py  video.py
src/usv_perception/src/: beeb_old.cpp  beeblebrox.cpp  common.hpp  onnx.hpp  pcd_visualizer.cpp  tensorrt.hpp  vision_node.cpp  yolo.cpp  zed.hpp  zed_new.hpp
src/usv_perception/src_old/: beeblebrox.cpp
src/usv_utils/: CMakeLists.txt  package.xml
src/usv_utils/launch/: boat_launch.py  test_aitsmc_joy_launch.py  test_can_joy_launch.py  test_mpc_joy_launch.py
src/usv_utils/src/: .imu_converter_node.cpp.swp  imu_converter_node.cpp  killswitch_node.cpp  obstacle_nearest_publisher.cpp  obstacle_viewer_node.cpp  odom_converter_node.cpp  pointcloud_converter_node.cpp  system_validation_node.cpp
usv_avoidance/: CMakeLists.txt  README.md  package.xml
usv_avoidance/scripts/usv_guidance5/: acados_ocp.json
usv_avoidance/scripts/usv_guidance_ca1/: acados_ocp.json  acados_settings.py
usv_avoidance/scripts/usv_pf/: acados_ocp.json
usv_avoidance/scripts/usv_pf_ca/: acados_ocp.json
usv_avoidance/src/: nmpc_guidance5.cpp  nmpc_guidance_ca1.cpp  nmpc_pf.cpp  nmpc_pf_ca.cpp  nmpc_traj_plan.cpp
usv_missions/: CMakeLists.txt
(+510 files in other folders)
